[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-run-community-tools"
version = "0.1.0"
authors = [
    { name = "AI Run Community", email = "community@airun.com" },
]
description = "AI Run Community Tools package with calculator functionality"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain-core>=0.1.0",
    "pydantic>=2.0.0",
    "tiktoken>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/ai-run/ai-run-community-tools"
Issues = "https://github.com/ai-run/ai-run-community-tools/issues"