[tool.poetry]
name = "ai-run-community-tools"
version = "0.0.1"
description = "Package with AI/Run communnity tools"
readme = "README.md"
authors = [
    "AIRun Team <airun@epam.com>"
]
packages = [
    { include = "ai_run_community_tools", from = "src"}
]

[tool.poetry.dependencies]
tiktoken = "^0.7.0"
ruff = "^0.5.4"
langchain = "0.3.3"
langchain-core = "^0.3.11"
pydantic = "^2.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[tool.ruff.lint]
ignore = ["F401"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
# Remove one by one to solve the all formatting issues
exclude = ["src/*","tests/*"]

[project.urls]
Homepage = "https://github.com/ai-run/ai-run-community-tools"
Issues = "https://github.com/ai-run/ai-run-community-tools/issues"
